@@ -1,3 +1,10 @@
+2003-04-19  Brian Warner  <warner@lothar.com>
+
+	* twisted/trial/remote.py (JellyReporter.reportResults): send only
+	name of testClass/method to remote reporter, not whole class and
+	method. Also add .taster hook to DecodeReport to let users specify
+	their own security options.
+
 2003-04-17  Kevin Turner  <acapnotic@twistedmatrix.com>
 
 	* .: Release 1.0.4 Final.
